# scheduler

./: meson.build  readme.md  scheduler.geany
include/: scheduler.hpp
src/: scheduler.cpp
test/: meson.build  scheduler_test.cpp
